# ai_codegen

./: .gitignore  AGENTS.md  opencode.json  todo  需要考虑的问题.md
.cursor/: README.md
.cursor/commands/: design-toolkit-init.md  design-toolkit-status.md
.cursor/rules/: ai-design-toolkit.mdc
.opencode/: README.md
.skills/: design-intake.md  design-normalize.md  design-to-plan.md  integration-verify.md  plan-to-slices.md  result-curate.md  slice-implement.md  slice-verify.md
.templates/: design-doc-template.md  final-index-template.md  implementation-plan-template.md  run-state-template.md  slice-template.md  traceability-matrix-template.md
demo/: README.md
demo/mini-curl/: Cargo.toml
demo/mini-curl/src/: cli.rs  error.rs  http_client.rs  main.rs  output.rs  request_builder.rs
docs/: ai-design-implementation-toolkit.md  toolkit-usage-guide.md
examples/finder/: DESIGN.md  README.md  pyproject.toml
examples/finder/finder/: __init__.py  __main__.py  cli.py  content_search.py  glob_filter.py  output.py  path_search.py  paths.py  types.py  walker.py
examples/finder/tests/: test_cli_integration.py  test_cli_path.py  test_cli_text.py  test_content_search.py  test_path_search.py  test_paths.py  test_walker.py
plans/: design-plan-skill-introduction.md
scripts/: sync-cursor-skills.ps1  sync-cursor-skills.sh  sync-ide-mirrors.ps1  sync-ide-mirrors.sh  sync-opencode-skills.ps1  sync-opencode-skills.sh
skill/: README.md  SKILL-LITE.md  SKILL.md  manifest.json
skill/design-check/: SKILL.md
skill/design-normalize/: SKILL.md
参考文档/: 软件开发流程文档.md
(+66 files in other folders)
