[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "finder-example"
version = "0.1.0"
description = "Design-driven example: text and path find CLI (slice-004: exit codes, SIGINT, README)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
finder = "finder.cli:run"

# Pip fallback: pip install -e ".[dev]". Preferred: uv sync && uv run pytest.
[project.optional-dependencies]
dev = ["pytest>=8"]

[dependency-groups]
dev = ["pytest>=8"]

[tool.uv]
default-groups = ["dev"]

[tool.hatch.build.targets.wheel]
packages = ["finder"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
